<resources>
    <string name="app_name">nyTimes</string>
    <string name="action_settings">Settings</string>
    <string name="hintSearchQuery">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="filters">Filters</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="arts">Arts</string>
    <string name="sports">Sports</string>
    <string name="news_desk_values">News Desk values</string>
    <string name="sort_order">Sort Order</string>
    <string name="begin_date">Begin Date</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string-array name="sort_order_array">
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
</resources>