<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="org.agoenka.nytimes.fragments.FilterSettingsFragment.Handlers" />
        <variable name="handlers" type="Handlers" />
    </data>

    <RelativeLayout
        android:id="@+id/fragment_filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dialog_vertical_margin"
        android:paddingLeft="@dimen/dialog_horizontal_margin"
        android:paddingRight="@dimen/dialog_horizontal_margin"
        android:paddingTop="@dimen/dialog_vertical_margin"
        tools:context="org.agoenka.nytimes.fragments.FilterSettingsFragment">

        <TextView
            android:id="@+id/tvBeginDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingTop="@dimen/datepicker_vertical_margin"
            android:text="@string/begin_date"/>

        <EditText
            android:id="@+id/etBeginDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/datepicker_horizontal_margin"
            android:layout_marginStart="@dimen/datepicker_horizontal_margin"
            android:layout_toEndOf="@id/tvBeginDate"
            android:layout_toRightOf="@id/tvBeginDate"
            android:minEms="10"
            android:onClick="@{handlers.showDatePickerDialog}"/>

        <TextView
            android:id="@+id/tvSortOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvBeginDate"
            android:layout_marginTop="@dimen/dialog_element_vertical_margin"
            android:text="@string/sort_order"/>

        <Spinner
            android:id="@+id/spnSortOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/etBeginDate"
            android:layout_alignStart="@id/etBeginDate"
            android:layout_alignTop="@+id/tvSortOrder"
            android:entries="@array/sort_order_array"/>

        <TextView
            android:id="@+id/tvNewsDesk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spnSortOrder"
            android:layout_marginTop="@dimen/dialog_element_vertical_margin"
            android:text="@string/news_desk_values"/>

        <CheckBox
            android:id="@+id/cbArts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/spnSortOrder"
            android:layout_alignStart="@id/spnSortOrder"
            android:layout_alignTop="@+id/tvNewsDesk"
            android:text="@string/arts"/>

        <CheckBox
            android:id="@+id/cbFashionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cbArts"
            android:layout_alignStart="@+id/cbArts"
            android:layout_below="@+id/cbArts"
            android:layout_marginTop="@dimen/dialog_checkbox_vertical_margin"
            android:text="@string/fashion_style"/>

        <CheckBox
            android:id="@+id/cbSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cbFashionStyle"
            android:layout_alignStart="@+id/cbFashionStyle"
            android:layout_below="@+id/cbFashionStyle"
            android:layout_marginTop="@dimen/dialog_checkbox_vertical_margin"
            android:text="@string/sports"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_below="@id/cbSports"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dialog_element_vertical_margin"
            android:text="@string/save"
            android:onClick="@{handlers.onSave}"/>

    </RelativeLayout>

</layout>